<resources>
<<<<<<< HEAD

    <string name="app_name">LincomRoIP</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LincomRoIP</string>
    <string name="empty_chan">--</string>
    <string name="watt_25">25W</string>
    <string name="watt_1">1W</string>
    <string name="squelch">Squelch</string>
	<string name="chan_up">Channel Up</string>
	<string name="chan_down">Channel Down</string>
	<string name="speak_now">Speak Now</string>
=======
  <string name="app_name">LincomRoIP</string>
  <string name="connect">Connect</string>
  <string name="disconnect">Disconnect</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_main">LincomRoIP</string>
  <string name="empty_chan">--</string>
  <string name="watt_25">25W</string>
  <string name="watt_1">1W</string>
  <string name="squelch">Squelch</string>
	<string name="chan_up">Channel Up</string>
	<string name="chan_down">Channel Down</string>
	<string name="speak_now">Speak Now</string>
	<string name="settings">Settings</string>
	<string name="exit">Exit</string>
>>>>>>> 35d3953b6e4a313efd8093865cbc3314438cd8eb
</resources>